##########################
# Setup.py Configuration #
##########################
[metadata]
name = diffupath
version = 0.0.4-dev
description = Compute diffusion scores over networks from biological databases
long_description = file: README.rst

# URLs associated with DiffuPath
url = https://github.com/multipaths/DiffuPath
download_url = https://github.com/multipaths/DiffuPath
project_urls =
    Bug Tracker = https://github.com/multipaths/DiffuPath/issues
    Source Code = https://github.com/multipaths/DiffuPath
    Documentation = https://diffupath.readthedocs.io

# Author information
author = Josep Marín-Llaó, Sergi Picart Armada, Daniel Domingo-Fernández
author_email = josepmarinllao@gmail.com
maintainer = Josep Marín-Llaó
maintainer_email = josepmarinllao@gmail.com

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics
    
keywords =
    Heat Diffusion
    Systems Biology
    Networks Biology

[options]
install_requires =
    networkx>=2.1
    pybel==0.13.2
    biokeen==0.0.14
    click==7.0
    tqdm==4.31.1
    numpy==1.16.3
    scipy==1.2.1
    scikit-learn==0.21.3
    pandas==0.24.2
    openpyxl==3.0.2
    plotly==4.5.3
    matplotlib==3.1.2
    chart_studio==1.0.0
    matplotlib_venn==0.11.5
    bio2bel==0.2.1
    pathme
    diffupy>=0.0.5
    statsmodels

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    diffupath = diffupath.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = diffupath

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
